--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=Osh
 server.port=5151
+
+spring.datasource.name=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/Osh
+spring.datasource.username=postgres
+spring.datasource.password=1234
