added image services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.name=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/Osh
 spring.datasource.username=postgres
 spring.datasource.password=1234
+
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
+application.bucket.name=
+cloud.aws.credential.region=
