--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,14 @@ spring.datasource.name=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/Osh
 spring.datasource.username=postgres
 spring.datasource.password=1234
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ecomarket1111@gmail.com
+spring.mail.password=budkvpemsvzrvljo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 
