--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,13 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.11.486</version>
 		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>org.liquibase</groupId>-->
+<!--			<artifactId>liquibase-core</artifactId>-->
+<!--			<version>4.27.0</version>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
