--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ application.security.jwt.secret-key=c9IvhXhpsH3xpxjKccUrD7RuwvtgQATX3Z+Iw/jRRWjw
 application.security.jwt.expiration=20000
 logging.level.org.springframework.security=DEBUG
 
-cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
-cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
 application.bucket.name=
 cloud.aws.credential.region=
