proporties is fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,4 @@ application.security.jwt.secret-key=c9IvhXhpsH3xpxjKccUrD7RuwvtgQATX3Z+Iw/jRRWjw
 application.security.jwt.expiration=20000
 logging.level.org.springframework.security=DEBUG
 
-spring.config.import=optional:file:./config/application-secret.properties
+spring.config.import=optional:classpath:application-secret.properties
