--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,12 @@
 <!--			<artifactId>liquibase-core</artifactId>-->
 <!--			<version>4.27.0</version>-->
 <!--		</dependency>-->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>10.10.0</version>
+		</dependency>
+
 
 	</dependencies>
 
