--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Osh
 server.port=5151
 
 spring.datasource.name=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/Osh
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
@@ -23,11 +23,6 @@ application.security.jwt.secret-key=c9IvhXhpsH3xpxjKccUrD7RuwvtgQATX3Z+Iw/jRRWjw
 #application.security.jwt.expiration=86400000
 application.security.jwt.expiration=20000
 logging.level.org.springframework.security=DEBUG
-
-cloud.aws.credentials.access-key=
-cloud.aws.credentials.secret-key=
-application.bucket.name=
-cloud.aws.credential.region=
 
 spring.config.import=optional:classpath:application-secret.properties
 
