--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ spring.flyway.user=postgres
 spring.flyway.schemas=public
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=false
+
+
+spring.messages.basename=i18n/messages
