--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,7 @@ spring.flyway.url=jdbc:postgresql://localhost:5432/Osh
 spring.flyway.password=1234
 spring.flyway.user=postgres
 spring.flyway.schemas=public
-spring.flyway.locations=classpath:db/migration
+spring.flyway.locations=classpath:db/migrations
 spring.flyway.baseline-on-migrate=false
-
 
 spring.messages.basename=i18n/messages
